# conway

./: LICENSE  README.md  config.py  conway.service  display.py  main.py  pyproject.toml  run.sh  runner.py
air_traffic/: __init__.py  adsb_lol.py  models.py  projection.py
games/: __init__.py  base.py  boids.py  conway.py  flight_radar.py  langton.py
tests/: test_air_traffic.py  test_flight_radar.py  test_langton.py  test_runner.py
